# ais-risk-research

./: .gitignore  README.md  pyproject.toml
configs/: base.toml  base_horizon10.toml  base_horizon20.toml  base_tuned_s035_w060.toml
data/: README.md
docs/: 00_document_strategy.md  01_project_charter.md  02_prd.md  03_technical_design.md  04_data_modeling_spec.md  05_risk_definition_spec.md  06_research_proposal.md  07_experiment_plan.md  08_uiux_requirements.md  09_roadmap_and_milestones.md  10_risk_register.md  11_one_page_summary.md  12_top_10_decisions.md  13_execution_checklist.md  14_quality_review.md  15_data_collection_and_model_iteration_plan.md  16_validation_strategy_upgrade.md  17_research_log_guide.md  18_public_ais_source_shortlist.md  19_dma_first_dataset_runbook.md  20_validation_protocol_v2.md  21_noaa_first_dataset_runbook.md  22_noaa_houston_quick_validation_runbook.md  23_rotating_own_ship_learning_protocol.md  README.md  data_algorithm_quality_review_2026-04-05_10seed.md  data_algorithm_quality_review_2026-04-05_10seed_high_risk_models.csv  external_validity_manuscript_assets_2026-04-05_10seed_transfer_uncertainty_table.csv  external_validity_manuscript_assets_2026-04-05_10seed_transfer_uncertainty_table.md  github_upload_commit_plan_2026-04-04.md  houston_transfer_calibration_probe_2026-04-05_10seed_detail.csv  houston_transfer_policy_compare_2026-04-05_10seed.csv  houston_transfer_policy_compare_2026-04-05_10seed.json  houston_transfer_policy_compare_all_models_2026-04-05_10seed.csv  houston_transfer_policy_compare_all_models_2026-04-05_10seed.md  (+28 more)
(+845 files in other folders)
